# paradevs-tests

./: .gitignore  AUTHORS  CMakeLists.txt  README
doc/: comparison.ods
output/: script.pl
src/: CMakeLists.txt
src/tests/: CMakeLists.txt
src/tests/boost_graph/: CMakeLists.txt  file_generator.cpp  graph_builder.hpp  graph_defs.hpp  graph_generator.hpp  graph_manager.hpp  graph_partitioning.hpp  hierarchical_graph_manager.hpp  models.hpp  tests.cpp
src/tests/boost_graph/partitioning/: CMakeLists.txt  defs.hpp  gggp.cpp  gggp.hpp  graph_build.cpp  graph_build.hpp  main.cpp  utils.cpp  utils.hpp
src/tests/common/: CMakeLists.txt
src/tests/common/scheduler/: CMakeLists.txt  tests.cpp
src/tests/dtss/: CMakeLists.txt  graph_manager.hpp  models.hpp  tests.cpp
src/tests/mixed/: CMakeLists.txt  graph_manager.hpp  models.hpp  tests.cpp
src/tests/mpi/: CMakeLists.txt  graph_manager.hpp  main.cpp  tests.cpp
src/tests/multithreading/: CMakeLists.txt  graph_manager.hpp  main.cpp  tests.cpp
src/tests/multithreading/lifegame/: CMakeLists.txt  graph_builder.hpp  graph_manager.hpp  main.cpp  models.hpp  tests.cpp
src/tests/pdevs/: CMakeLists.txt  graph_manager.hpp  main.cpp  models.hpp  tests.cpp
src/tests/plot/: CMakeLists.txt  climate.hpp  cohorte.hpp  dispersion.hpp  graph_builder.hpp  graph_defs.hpp  graph_manager.hpp  main.cpp  milsol.hpp  models.hpp
