INCLUDE_DIRECTORIES(
  ${PARADEVS_BINARY_DIR}/src
  ${PARADEVS_SOURCE_DIR}/src
  ${Boost_INCLUDE_DIRS}
  ${GLIBMM_INCLUDE_DIRS}
  ${LIBXML_INCLUDE_DIRS})

LINK_DIRECTORIES(
  ${GLIBMM_LIBRARY_DIRS}
  ${LIBXML_LIBRARY_DIR})

ADD_SUBDIRECTORY(boost_graph)
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(corsen)
ADD_SUBDIRECTORY(dtss)
ADD_SUBDIRECTORY(mixed)
ADD_SUBDIRECTORY(multithreading)
ADD_SUBDIRECTORY(pdevs)